# EfficientRLM

./: .gitignore  PROVENANCE.md  README.md
docs/: MITIGATION_PLAN_ONESIDED_TAIL_DELEGATION_FLOOR.md  PHASE0_REVIEW_MEMO_20260717.md  PREREG_T3_MITIGATED.md
prime-rl/: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile.cuda  README.md  pyproject.toml
prime-rl/.cursor/: BUGBOT.md
prime-rl/.github/workflows/: cpu_tests.yaml  sync-docs.yml
prime-rl/configs/debug/: multimodal.toml
prime-rl/configs/hendrycks_math/: rl.toml
prime-rl/configs/math_group/: rl.toml
prime-rl/configs/nemotron_4node/: rl.toml
prime-rl/configs/nemotron_debug/: rl.toml
prime-rl/configs/wiki_search/: rl.toml
prime-rl/docs/: advanced.md  algorithms.md  configuration.md  development.md  inference.md  mint.json  overview.md  scaling.md
prime-rl/scripts/: docker-arm64-post-install.sh  docker-editable-pretend-versions.sh  docker-entrypoint.sh  fix-flash-attn-cute.sh  install.sh  install_deep_gemm.sh  install_llmd.sh  install_nixl_from_source.sh  mini_moe.py  tmux.sh
prime-rl/tests/: utils.py
rlm/training/: run_ab_control.sh  run_smoke_bcplus.sh  run_smoke_bcplus_lean.sh  run_smoke_bcplus_lean2.sh  run_smoke_longcot_mini.sh  run_smoke_multienv20.sh  run_smokes.sbatch  run_smokes_seq.sh  run_t2.sh  run_t3.sh  supervise_ab_control.sh  supervise_smoke_bcplus_lean.sh  supervise_smoke_bcplus_lean2.sh  supervise_smoke_multienv20.sh  watch_ab_metrics.py  watchdog_ab_control.sh
rlm/training/environments/browsecomp_plus/: README.md  pyproject.toml
rlm/training/environments/browsecomp_plus/browsecomp_plus/: __init__.py  _data.py  _judge.py  description.py  env.py
rlm/training/environments/longbench_codeqa/: README.md  pyproject.toml
rlm/training/environments/longbench_codeqa/longbench_codeqa/: __init__.py  env.py
rlm/training/environments/longcot_mini/: README.md  pyproject.toml
rlm/training/environments/longcot_mini/longcot_mini/: __init__.py  env.py
rlm/training/environments/oolong_pairs/: README.md  pyproject.toml
rlm/training/environments/oolong_pairs/oolong_pairs/: __init__.py  env.py
scripts/: 05_fig_training_curves.py  05a_pull_eval_series.py  06_fig_runtime.py  07_fig_pareto.py  08_docqa_mini_stats.py  09_codeqa_pooled.py  10_fig_tail_ccdf.py  11_mitigation_replay.py  12_mitigation_rederive.py  backup_artifacts_to_hf.py  backup_qwen3_ab_treatment_state.sh  canary_codeqa_ai16.sh  canary_codeqa_t2t_ai16.sh  canary_domain_probe_ai16.sh  canary_fence_probe_ai16.sh  canary_prologue_probe_ai16.sh  compare_bcplus_smoke.py  oracle_inline_wandb.py  oracle_offline.py  oracle_rescore.py  prune_qwen3_ab_treatment_s3_checkpoints.sh  replicate_t2t200_oolong_ai16.sh  restore_qwen3_ab_treatment_state.sh  resume_qwen3_ab_treatment.sh  run_qwen3_ab_treatment.sh  run_qwen3_t2_treatment_fresh_teamspace.sh  studio_recover.py  studio_to_cpu.py  upload_qwen3_ab_treatment_lora.sh
scripts/offline_eval/: 00_serve.sh  00_serve_8gpu.sh  00a_fetch_adapters.sh  00b_serve_authors.sh  01_run_evals.sh  01_run_evals_8gpu.sh  02_summarize.py  03_thesis_stats.py  04_fig_codeqa_collapse.py  10_setup.sh  README.md
(+198 files in other folders)
