[project]
name = "browsecomp_plus"
version = "0.1.0"
description = "BrowseComp-Plus evidence-document deep-research QA (eval-suite port) via RLMTrainEnv."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rlm-train",
    "verifiers>=0.1.11.dev0",
    "datasets>=4.0",
]

[tool.uv.sources]
rlm-train = { path = "../..", editable = true }

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["browsecomp_plus"]

[project.entry-points."verifiers.environments"]
browsecomp_plus = "browsecomp_plus:load_environment"
