[project]
name = "longbench_codeqa"
version = "0.1.0"
description = "LongBench-v2 Code Repository Understanding MCQ (eval-suite port) via RLMTrainEnv."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rlm-train",
    "verifiers>=0.1.11.dev0",
    "datasets>=4.0",
]

[tool.uv.sources]
rlm-train = { path = "../..", editable = true }

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["longbench_codeqa"]

[project.entry-points."verifiers.environments"]
longbench_codeqa = "longbench_codeqa:load_environment"
