[project]
name = "oolong_pairs"
version = "0.1.0"
description = "OOLONG-Pairs pairwise-aggregation QA (eval-suite port) via RLMTrainEnv, with source-traced user prologue."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rlm-train",
    "verifiers>=0.1.11.dev0",
    "datasets>=4.0",
    "huggingface_hub>=0.23",
]

[tool.uv.sources]
rlm-train = { path = "../..", editable = true }

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oolong_pairs"]

[project.entry-points."verifiers.environments"]
oolong_pairs = "oolong_pairs:load_environment"
